Promo and Confirm pages are all over done

--- a/prepros.config
+++ b/prepros.config
@@ -944,9 +944,43 @@
         }
       },
       {
+        "file": "_app/confirm.pug",
+        "config": {
+          "customOutput": "confirm\\index.html"
+        }
+      },
+      {
         "file": "_app/index.pug",
         "config": {
           "customOutput": "index.html"
+        }
+      },
+      {
+        "file": "_app/promo.pug",
+        "config": {
+          "customOutput": "promo\\index.html"
+        }
+      },
+      {
+        "file": "_app/styl/confirm.min.styl",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": false
+            }
+          },
+          "customOutput": "css\\confirm.css"
+        }
+      },
+      {
+        "file": "_app/styl/promo.min.styl",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": false
+            }
+          },
+          "customOutput": "css\\promo.css"
         }
       },
       {
@@ -958,6 +992,22 @@
             }
           },
           "customOutput": "css\\styles.css"
+        }
+      },
+      {
+        "file": "css/confirm.css",
+        "config": {
+          "autoCompile": true,
+          "sourceMap": true,
+          "customOutput": "css\\confirm.min.css"
+        }
+      },
+      {
+        "file": "css/promo.css",
+        "config": {
+          "autoCompile": true,
+          "sourceMap": true,
+          "customOutput": "css\\promo.min.css"
         }
       },
       {
