--- a/prepros.config
+++ b/prepros.config
@@ -3,9 +3,9 @@
   "about": "This is a Prepros (https://prepros.io) configuration file. You can commit this file to a git repo to backup and sync project configurations.",
   "config": {
     "proxy": {
-      "enable": false,
-      "target": "",
-      "useLocalAssets": false
+      "enable": true,
+      "target": "http://iomp.space",
+      "useLocalAssets": true
     },
     "reload": {
       "enable": true,
@@ -84,7 +84,413 @@
       "autoUpload": false,
       "reuseConnection": true,
       "connectionType": "ftp",
-      "history": []
+      "history": [
+        {
+          "file": "favicon.ico",
+          "mtimeMs": 1614746712000,
+          "date": "2022-04-17T11:20:15.293Z"
+        },
+        {
+          "file": "favicon.png",
+          "mtimeMs": 1614746716000,
+          "date": "2022-04-17T11:20:17.371Z"
+        },
+        {
+          "file": "favicon.svg",
+          "mtimeMs": 1614746722000,
+          "date": "2022-04-17T11:20:17.981Z"
+        },
+        {
+          "file": "confirm/index.html",
+          "mtimeMs": 1650458424706.2053,
+          "date": "2022-04-20T12:40:29.207Z"
+        },
+        {
+          "file": "css/confirm.css",
+          "mtimeMs": 1650441678655.952,
+          "date": "2022-04-20T08:01:59.682Z"
+        },
+        {
+          "file": "css/confirm.min.css",
+          "mtimeMs": 1650441680942.2463,
+          "date": "2022-04-20T08:02:00.344Z"
+        },
+        {
+          "file": "css/confirm.min.css.map",
+          "mtimeMs": 1650441680951.241,
+          "date": "2022-04-20T08:02:00.815Z"
+        },
+        {
+          "file": "css/promo.css",
+          "mtimeMs": 1650441678856.9443,
+          "date": "2022-04-20T08:02:01.312Z"
+        },
+        {
+          "file": "css/promo.min.css",
+          "mtimeMs": 1650441681077.1626,
+          "date": "2022-04-20T08:02:01.804Z"
+        },
+        {
+          "file": "css/promo.min.css.map",
+          "mtimeMs": 1650441681235.064,
+          "date": "2022-04-20T08:02:02.254Z"
+        },
+        {
+          "file": "css/styles.css",
+          "mtimeMs": 1650523250923.8196,
+          "date": "2022-04-21T06:41:04.353Z"
+        },
+        {
+          "file": "css/styles.min.css",
+          "mtimeMs": 1650523252462.2102,
+          "date": "2022-04-21T06:41:04.859Z"
+        },
+        {
+          "file": "css/styles.min.css.map",
+          "mtimeMs": 1650523252464.21,
+          "date": "2022-04-21T06:41:05.360Z"
+        },
+        {
+          "file": "fonts/FreeSetExtraCTT.eot",
+          "mtimeMs": 1650008594000,
+          "date": "2022-04-17T11:20:27.500Z"
+        },
+        {
+          "file": "fonts/FreeSetExtraCTT.svg",
+          "mtimeMs": 1650008594000,
+          "date": "2022-04-17T11:20:28.070Z"
+        },
+        {
+          "file": "fonts/FreeSetExtraCTT.ttf",
+          "mtimeMs": 1650008594000,
+          "date": "2022-04-17T11:20:28.649Z"
+        },
+        {
+          "file": "fonts/FreeSetExtraCTT.woff",
+          "mtimeMs": 1650008594000,
+          "date": "2022-04-17T11:20:29.193Z"
+        },
+        {
+          "file": "fonts/FreeSetExtraCTT.woff2",
+          "mtimeMs": 1650008594000,
+          "date": "2022-04-17T11:20:29.757Z"
+        },
+        {
+          "file": "fonts/GilroyBold.eot",
+          "mtimeMs": 1602295704000,
+          "date": "2022-04-17T11:20:30.381Z"
+        },
+        {
+          "file": "fonts/GilroyBold.svg",
+          "mtimeMs": 1602295704000,
+          "date": "2022-04-17T11:20:31.115Z"
+        },
+        {
+          "file": "fonts/GilroyBold.ttf",
+          "mtimeMs": 1602295704000,
+          "date": "2022-04-17T11:20:31.720Z"
+        },
+        {
+          "file": "fonts/GilroyBold.woff",
+          "mtimeMs": 1602295704000,
+          "date": "2022-04-17T11:20:32.362Z"
+        },
+        {
+          "file": "fonts/GilroyBold.woff2",
+          "mtimeMs": 1602295704000,
+          "date": "2022-04-17T11:20:32.898Z"
+        },
+        {
+          "file": "fonts/GilroyLight.eot",
+          "mtimeMs": 1588995544000,
+          "date": "2022-04-17T11:20:33.541Z"
+        },
+        {
+          "file": "fonts/GilroyLight.svg",
+          "mtimeMs": 1588995542000,
+          "date": "2022-04-17T11:20:34.678Z"
+        },
+        {
+          "file": "fonts/GilroyLight.ttf",
+          "mtimeMs": 1588995542000,
+          "date": "2022-04-17T11:20:35.297Z"
+        },
+        {
+          "file": "fonts/GilroyLight.woff",
+          "mtimeMs": 1588995544000,
+          "date": "2022-04-17T11:20:35.828Z"
+        },
+        {
+          "file": "fonts/GilroyLight.woff2",
+          "mtimeMs": 1588995544000,
+          "date": "2022-04-17T11:20:36.373Z"
+        },
+        {
+          "file": "fonts/GilroyRegular.eot",
+          "mtimeMs": 1602294934000,
+          "date": "2022-04-17T11:20:37.151Z"
+        },
+        {
+          "file": "fonts/GilroyRegular.svg",
+          "mtimeMs": 1602294934000,
+          "date": "2022-04-17T11:20:38.256Z"
+        },
+        {
+          "file": "fonts/GilroyRegular.ttf",
+          "mtimeMs": 1602294934000,
+          "date": "2022-04-17T11:20:38.946Z"
+        },
+        {
+          "file": "fonts/GilroyRegular.woff",
+          "mtimeMs": 1602294934000,
+          "date": "2022-04-17T11:20:39.741Z"
+        },
+        {
+          "file": "fonts/GilroyRegular.woff2",
+          "mtimeMs": 1602294936000,
+          "date": "2022-04-17T11:20:40.761Z"
+        },
+        {
+          "file": "img/backs/author-mob.png",
+          "mtimeMs": 1650374320938.5337,
+          "date": "2022-04-19T13:20:44.050Z"
+        },
+        {
+          "file": "img/backs/author.png",
+          "mtimeMs": 1650352118022.501,
+          "date": "2022-04-19T07:08:48.985Z"
+        },
+        {
+          "file": "img/backs/third-mob.png",
+          "mtimeMs": 1650373952328.0295,
+          "date": "2022-04-19T13:17:39.959Z"
+        },
+        {
+          "file": "img/backs/third.png",
+          "mtimeMs": 1650352054336.1538,
+          "date": "2022-04-19T07:08:49.986Z"
+        },
+        {
+          "file": "img/icons/arrows.png",
+          "mtimeMs": 1650272433860.5908,
+          "date": "2022-04-18T09:02:21.001Z"
+        },
+        {
+          "file": "img/icons/gmail.png",
+          "mtimeMs": 1614319639699.2766,
+          "date": "2022-04-17T11:20:46.026Z"
+        },
+        {
+          "file": "img/icons/mailru.png",
+          "mtimeMs": 1614319641390.2866,
+          "date": "2022-04-17T11:20:46.517Z"
+        },
+        {
+          "file": "img/icons/tg.png",
+          "mtimeMs": 1647771917062.5752,
+          "date": "2022-04-17T11:20:48.381Z"
+        },
+        {
+          "file": "img/icons/yahoo.png",
+          "mtimeMs": 1614319643462.0012,
+          "date": "2022-04-17T11:20:48.874Z"
+        },
+        {
+          "file": "img/icons/yandex.png",
+          "mtimeMs": 1614319645635.6538,
+          "date": "2022-04-17T11:20:49.368Z"
+        },
+        {
+          "file": "img/images/fifth-mob.png",
+          "mtimeMs": 1650445982425.7068,
+          "date": "2022-04-20T09:21:29.625Z"
+        },
+        {
+          "file": "img/images/fifth.png",
+          "mtimeMs": 1650445994043.391,
+          "date": "2022-04-20T09:21:30.332Z"
+        },
+        {
+          "file": "img/images/fourth-mob.png",
+          "mtimeMs": 1650445954501.6868,
+          "date": "2022-04-20T09:21:30.979Z"
+        },
+        {
+          "file": "img/images/fourth.png",
+          "mtimeMs": 1650445969122.3445,
+          "date": "2022-04-20T09:21:31.808Z"
+        },
+        {
+          "file": "img/images/main-mob.png",
+          "mtimeMs": 1650445922223.61,
+          "date": "2022-04-20T09:21:33.692Z"
+        },
+        {
+          "file": "img/images/main.png",
+          "mtimeMs": 1650445786353.3308,
+          "date": "2022-04-20T09:21:34.450Z"
+        },
+        {
+          "file": "img/images/second-mob.png",
+          "mtimeMs": 1650446008194.156,
+          "date": "2022-04-20T09:21:35.163Z"
+        },
+        {
+          "file": "img/images/second.png",
+          "mtimeMs": 1650445905708.6274,
+          "date": "2022-04-20T09:21:35.902Z"
+        },
+        {
+          "file": "js/lib.js",
+          "mtimeMs": 1649956175817.684,
+          "date": "2022-04-17T11:20:57.046Z"
+        },
+        {
+          "file": "js/lib.min.js",
+          "mtimeMs": 1649956197541.0945,
+          "date": "2022-04-17T11:20:57.675Z"
+        },
+        {
+          "file": "js/lib.min.js.map",
+          "mtimeMs": 1649956197582.068,
+          "date": "2022-04-17T11:20:58.257Z"
+        },
+        {
+          "file": "js/scripts.js",
+          "mtimeMs": 1650458214480.4177,
+          "date": "2022-04-20T12:37:33.886Z"
+        },
+        {
+          "file": "js/scripts.min.js",
+          "mtimeMs": 1650458216719.5623,
+          "date": "2022-04-20T12:37:34.417Z"
+        },
+        {
+          "file": "js/scripts.min.js.map",
+          "mtimeMs": 1650458216742.5474,
+          "date": "2022-04-20T12:37:34.861Z"
+        },
+        {
+          "file": "promo/index.html",
+          "mtimeMs": 1650458424662.232,
+          "date": "2022-04-20T12:40:29.641Z"
+        },
+        {
+          "file": "img/images/logo.png",
+          "mtimeMs": 1650445933500.069,
+          "date": "2022-04-20T09:21:32.988Z"
+        },
+        {
+          "file": "img/images/header-logo.png",
+          "mtimeMs": 1650445943303.84,
+          "date": "2022-04-20T09:21:32.361Z"
+        },
+        {
+          "file": "img/images/header-logo.svg",
+          "mtimeMs": 1650441615803.9302,
+          "date": "2022-04-20T08:02:04.767Z"
+        },
+        {
+          "file": "img/revs/rev-1.jpg",
+          "mtimeMs": 1650403124000,
+          "date": "2022-04-20T12:20:26.242Z"
+        },
+        {
+          "file": "img/revs/rev-2.jpg",
+          "mtimeMs": 1650403124000,
+          "date": "2022-04-20T12:20:26.990Z"
+        },
+        {
+          "file": "img/revs/rev-3.jpg",
+          "mtimeMs": 1650403124000,
+          "date": "2022-04-20T12:20:27.690Z"
+        },
+        {
+          "file": "img/revs/rev-4.jpg",
+          "mtimeMs": 1650403148000,
+          "date": "2022-04-20T12:20:28.564Z"
+        },
+        {
+          "file": "img/revs/rev-5.jpg",
+          "mtimeMs": 1650403124000,
+          "date": "2022-04-20T12:20:29.366Z"
+        },
+        {
+          "file": "img/revs/rev-6.jpg",
+          "mtimeMs": 1650403124000,
+          "date": "2022-04-20T12:20:30.290Z"
+        },
+        {
+          "file": "img/revs/rev-7.jpg",
+          "mtimeMs": 1650403124000,
+          "date": "2022-04-20T12:20:31.012Z"
+        },
+        {
+          "file": "img/revs/rev-8.jpg",
+          "mtimeMs": 1650403124000,
+          "date": "2022-04-20T12:20:31.756Z"
+        },
+        {
+          "file": "img/revs/rev-9.jpg",
+          "mtimeMs": 1650403124000,
+          "date": "2022-04-20T12:20:32.460Z"
+        },
+        {
+          "file": "img/revs/rev-1.min.jpg",
+          "mtimeMs": 1650457823480.129,
+          "date": "2022-04-20T12:32:04.264Z"
+        },
+        {
+          "file": "img/revs/rev-2.min.jpg",
+          "mtimeMs": 1650457807310.9236,
+          "date": "2022-04-20T12:32:05.001Z"
+        },
+        {
+          "file": "img/revs/rev-3.min.jpg",
+          "mtimeMs": 1650457789812.655,
+          "date": "2022-04-20T12:32:05.637Z"
+        },
+        {
+          "file": "img/revs/rev-4.min.jpg",
+          "mtimeMs": 1650457840611.9019,
+          "date": "2022-04-20T12:32:06.195Z"
+        },
+        {
+          "file": "img/revs/rev-5.min.jpg",
+          "mtimeMs": 1650457917494.8542,
+          "date": "2022-04-20T12:32:06.793Z"
+        },
+        {
+          "file": "img/revs/rev-6.min.jpg",
+          "mtimeMs": 1650457900841.1716,
+          "date": "2022-04-20T12:32:07.409Z"
+        },
+        {
+          "file": "img/revs/rev-7.min.jpg",
+          "mtimeMs": 1650457882636.4104,
+          "date": "2022-04-20T12:32:07.987Z"
+        },
+        {
+          "file": "img/revs/rev-8.min.jpg",
+          "mtimeMs": 1650457868759.7869,
+          "date": "2022-04-20T12:32:08.605Z"
+        },
+        {
+          "file": "img/revs/rev-9.min.jpg",
+          "mtimeMs": 1650457854789.1658,
+          "date": "2022-04-20T12:32:09.181Z"
+        },
+        {
+          "file": "index.php",
+          "mtimeMs": 1650523137861.622,
+          "date": "2022-04-21T06:41:03.850Z"
+        },
+        {
+          "file": "date/date.php",
+          "mtimeMs": 1650459127492.0938,
+          "date": "2022-04-20T12:54:39.575Z"
+        }
+      ]
     },
     "packages": {
       "createPackageLock": true
@@ -952,7 +1358,7 @@
       {
         "file": "_app/index.pug",
         "config": {
-          "customOutput": "index.html"
+          "customOutput": "index.php"
         }
       },
       {
